# VLA_Module

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/models/: pi0.yaml  smolvla.yaml
demos/: demo_cli_usage.py
docs/: Considerations.md
src/vla_module/cli/: main.py
src/vla_module/data/: dataloaders.py  lerobot_adapter.py
src/vla_module/data/lerobot/pusht/data/chunk-000/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet  episode_000005.parquet  episode_000006.parquet  episode_000007.parquet  episode_000008.parquet  episode_000009.parquet  episode_000010.parquet  episode_000011.parquet  episode_000012.parquet  episode_000013.parquet  episode_000014.parquet  episode_000015.parquet  episode_000016.parquet  episode_000017.parquet  episode_000018.parquet  episode_000019.parquet  episode_000020.parquet  episode_000021.parquet  episode_000022.parquet  episode_000023.parquet  episode_000024.parquet  episode_000025.parquet  episode_000026.parquet  episode_000027.parquet  episode_000028.parquet  episode_000029.parquet  episode_000030.parquet  episode_000031.parquet  episode_000032.parquet  episode_000033.parquet  episode_000034.parquet  episode_000035.parquet  episode_000036.parquet  episode_000037.parquet  episode_000038.parquet  episode_000039.parquet  (+166 more)
src/vla_module/data/lerobot/pusht/meta/: episodes_stats.jsonl  info.json
src/vla_module/models/: hub.py  model_loader.py
src/vla_module/models/pi0/: PI0Config.py  PI0Policy.py  PaliGemmaWithActionExpert.py  __init__.py  helpers.py  test.py
src/vla_module/models/smolvla/: SmolVLAConfig.py  SmolVLAPolicy.py  SmolVLMWithExpert.py  __init__.py  helpers.py
src/vla_module/simulation/: SIM_Considerations.md
src/vla_module/training/: README.md  __init__.py  action_head_trainer.py  action_head_tuner.py  action_space_config.py  train_vla.py  training_config.py
src/vla_module/training/lr_schedulers/: LRSchedulerConfigs.py  lrscheduler_state.py
src/vla_module/training/optimizers/: OptimizerConfigs.py  optim_state.py
src/vla_module/training/utils/: checkpoint_utils.py  freeze_utils.py
src/vla_module/utils/: device_info.py  get_device.py  io_utils.py  param_utils.py
vla_module/: config_loader.py
vla_module/models/: pi0_arch.py  smolvla_arch.py
