[project]
name = "vla-modules"
version = "0.1.0"
description = "Modular Vision-Language-Action Fine-tuning for Robotics Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lerobot>=0.3.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "pyyaml>=6.0",
    "huggingface-hub>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
vla-cli = "vla_module.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["vla_module"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
