[project]
name = "vla-modules"
version = "0.1.0"
description = "Modular Vision-Language-Action Fine-tuning for Robotics Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyyaml>=6.0",
    "huggingface-hub>=0.25.0",
    "rich>=13.0.0",
    "torchvision<0.23",
    "lerobot[pi0,smolvla]==0.3.3",
    "pytest>=8.4.2",
    "wandb>=0.22.2",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv]
package = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
